templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow-httproute
spec:
  parentRefs:
  - name: kong
    namespace: kong
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /mlflow
      backendRefs:
      - name: mlflow
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /mlflowapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
      - name: mlflow
        port: 80
